Fixed NavBar not collapsing issue
 * Added react-router-bootstrap to combine router with bootstrap effects
 * Fixed root layout background
 * Fixed image size that prevented seeing the collapsed menu icon

TODO
 * Must make website's homepage be on /latest insted of /

See #39

--- a/dresscode/client-app/src/app/layout/App.css
+++ b/dresscode/client-app/src/app/layout/App.css
@@ -1,7 +1,5 @@
 #root {
   background-color: #fffbf6;
-  /* margin-top: 90px; */
-  margin-top: 59px;
-  width: 100vw;
-  height: 100vh;
+  padding-top: 59px;
+  min-height: 100vh;
 }
